syntax="proto3";
package pbs;
option go_package ="./;pbs";

import "google/api/annotations.proto";

message SearchRequest{
    string q=1;//搜索的文字
}
message SearchResponse{
    string text=1;
}

service CarwlerService{
    rpc Search(SearchRequest) returns (SearchResponse){
        option (google.api.http)={
        get:"/v1/srawler/{q}"    
        };

    }
}
